--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,16 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: user) do |form| %>
+    <% if user.errors.any? %>
+        <div id="error_explanation">
+        <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being checked:</h2>
+
+        <ul>
+        <% user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+        </ul>
+        </div>
+    <% end %>
+
     <div class="fields">
         <%= form.text_field :first_name, id: :first_name, placeholder: "First name"  %>
         <%= form.text_field :last_name, id: :last_name, placeholder: "Last name"  %>
