--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,3 @@
-
 <%= render 'form', user: @user %>
 
 <h3>Valid emails</h3>
@@ -24,6 +23,7 @@
             <% else %>
               <td>Processing...</td>
             <% end %>
+            <td><%= link_to 'remove', user, remote: true, method: :delete %></td>
         </tr>
         <% end %>
   </tbody>
